--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/server.js"
+    "start": "node dist/server.js"
   },
   "author": "Morteza Jalilifar",
   "license": "ISC",
@@ -17,7 +17,6 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/node": "^14.14.31",
-    "nodemon": "^2.0.7"
+    "@types/node": "^14.14.31"
   }
 }
