--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,13 @@
     "@types/socket.io": "^2.1.13",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "helmet": "^4.4.1",
+    "morgan": "^1.10.0",
     "socket.io": "^3.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.31"
   }
 }
