--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "morgan": "^1.10.0",
     "socket.io": "^3.1.1"
   },
+  "engines": {
+    "node": "10.23.1"
+  },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
